# tg-job-collector

./: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/channels/: models.py  router.py  schemas.py  service.py
backend/app/collector/: client.py  router.py  schemas.py
backend/app/cvs/: models.py  router.py  schemas.py  service.py
backend/app/jobs/: models.py  router.py  schemas.py  service.py
backend/app/matches/: models.py  router.py  schemas.py  service.py
backend/app/outreach/: models.py  router.py  schemas.py  service.py
backend/app/pipeline/: graph.py  llm.py  nodes.py  state.py
backend/app/settings/: models.py  router.py  schemas.py  service.py
collector/: Dockerfile  pyproject.toml
collector/app/: config.py  listener.py  main.py  router.py  session.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  channels.ts  client.ts  cvs.ts  jobs.ts  matches.ts  outreach.ts  settings.ts
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Jobs.tsx  Login.tsx  Matches.tsx  Outreach.tsx  Settings.tsx
frontend/src/pages/Onboarding/: StepCVs.tsx  StepChannels.tsx  StepPrompts.tsx  StepQR.tsx  index.tsx
